# ratcrate-cli

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SUPPORT.md
.github/: SECURITY.md  labeler.yml
.github/ISSUE_TEMPLATE/: CONTRIBUTING.md  bug_report.md  config.yml
.github/workflow/: release.yml
.github/workflows/: all-release.yml  check.yml  ci.yml  release.yml  test-release.yml
experiment/: exp.rs
src/: cache.rs  config.rs  fetch.rs  main.rs  types.rs  utils.rs
