[package]
name = "ratcrate-cli"
version = "0.1.0"
edition = "2024"
authors = ["rakesh.venkat@gmail.com"]
licence = "MIT"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
indicatif = "0.18.0"
regex = "1.11.1"
serde_json = "1.0.142"
toml = "0.9.4"
url = "2.5.4"
tokio = {version = "1.47.1", features = ["full"] } 
clap = { version = "4.5.43", features = ["derive"] }
reqwest = {version="0.12.22", features=["json"]}
serde = {version = "1.0.219", features = ["derive"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
fastrand = "2.3.0"


[dev-dependencies]
httpmock = "0.6.0"


# [[bin]]
# name = "exp"
# path = "experiment/exp.rs"
