[package]
name = "ratcrate-cli"
version = "0.1.0"
edition = "2024"
authors = ["rakesh.venkat@gmail.com"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


