[package]
name = "ratcrate-cli"
version = "0.1.2"
edition = "2024"
authors = ["Rakesh Venkat qubitai.in@gmail.com"]
description = "Display Ratatui data using CLI"
license = "MIT"
repository = "https://github.com/ratcrate/ratcrate-cli"
homepage = "https://github.com/ratcrate/ratcrate-cli"
documentation = "https://docs.rs/ratcrate-cli"
readme = "README.md"
keywords = ["ratatui", "ratcrate", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "test_input/*",
    "test_output/*",
    ".github/*",
    ]

[[bin]]
name = "ratcrate-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tabled = {version="0.20.0", optional = true}

[features]
table = ["tabled"]
